--- a/bower.json
+++ b/bower.json
@@ -1,3 +1,14 @@
 {
-  "private": true
+  "name": "agenda",
+  "authors": [
+    "Luan Einhardt <ldseinhardt@gmail.com>"
+  ],
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "bootstrap": "^3.3.7",
+    "bootstrap-material-design": "^0.5.9",
+    "material-design-icons": "^3.0.1"
+  },
+  "private": true,
+  "license": "MIT"
 }
